# local-first-agent-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: flask-5014.instance.json
results/: AUTHORTEST-copy.json
results/653-copy/: approval.json  picks-copy.json
results/653-copy/bundle/: ELI5.md  copy.js  copy.test.js  derive.json  wrong_stub_digit-run-drop.js  wrong_stub_no-fabrication-check.js  wrong_stub_no-unguarded-check.js
src/lfah/: __init__.py  authortest.py  build.py  cli.py  eval_patch.sh  eval_patch_jest.sh  relay.py
src/lfah/bundle/agents/: evaluator.md  executor.md  planner.md
src/lfah/bundle/skills/build-execute-specialist/: SKILL.md
src/lfah/bundle/skills/codefix-evaluate-specialist/: SKILL.md
src/lfah/bundle/skills/codefix-execute-specialist/: SKILL.md
src/lfah/bundle/skills/codefix-plan-specialist/: SKILL.md
src/lfah/bundle/skills/redtest-author-specialist/: SKILL.md
src/lfah/bundle/skills/redtest-review-specialist/: SKILL.md
tests/: test_authortest.py  test_build.py  test_build_execute_specialist.py  test_config_precedence.py  test_disallowed_tools.py  test_executor_recipe.py  test_failfast_crashed_executor.py  test_import.py  test_infra_skip.py  test_jest_oracle_copytree.py  test_jest_profile.py  test_local_conn_infra_skip.py  test_newfile_diff_capture.py
tests/fixtures/jest/: materialize.py
tests/fixtures/jest/instanceA-sum/: meta.json
tests/fixtures/jest/instanceA-sum/fixed/: sum.js
tests/fixtures/jest/instanceA-sum/repo_src/: package.json  sum.js  sum.test.js
tests/fixtures/jest/instanceB-capitalize/: meta.json
tests/fixtures/jest/instanceB-capitalize/fixed/: str.js
tests/fixtures/jest/instanceB-capitalize/repo_src/: package.json  str.js  str.test.js
